# Qt-ModelViewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Color.h  MeshFile.cpp  MeshFile.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  PointManager.cpp  PointManager.h  QtGuiApplication1.aps  QtGuiApplication1.cpp  QtGuiApplication1.h  QtGuiApplication1.qrc  QtGuiApplication1.rc  QtGuiApplication1.sln  QtGuiApplication1.ui  QtGuiApplication1.vcxproj  QtGuiApplication1.vcxproj.filters  Vector.h  gl_list.h  main.cpp  main.h  myopenglwidget.cpp  util.h
GeneratedFiles/: qrc_QtGuiApplication1.cpp  ui_QtGuiApplication1.h
GeneratedFiles/Debug/: moc_MyOpenGLWidget.cpp
GeneratedFiles/Release/: moc_QtGuiApplication1.cpp
